Did data analysis on the relationshop between genres and popularity

--- a/IAD/IAD-I.ipynb
+++ b/IAD/IAD-I.ipynb
@@ -289,15 +289,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmp_df.to_csv('clean_1.csv')"
+    "tmp_df.rename(columns=lambda x: x.strip().lower().replace(\" \", \"_\"), inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tmp_df.to_csv('clean_1.csv')"
+   ]
   }
  ],
  "metadata": {
